--- a/frontend-veritas-app/index.html
+++ b/frontend-veritas-app/index.html
@@ -60,6 +60,13 @@
             </nav>
 
             <div class="flex items-center gap-4">
+                <button id="btn-toggle-notifs" class="group flex items-center gap-2 px-3 py-1.5 rounded-full border border-white/10 hover:border-blue-500/30 hover:bg-blue-500/10 transition cursor-pointer backdrop-blur-sm">
+                    <div id="icon-container" class="text-gray-400 group-hover:text-blue-400 transition">
+                        <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path></svg>
+                    </div>
+                    <span id="lbl-notifs" class="text-[10px] font-mono uppercase tracking-widest text-gray-400 group-hover:text-white">Enable Alerts</span>
+                </button>
+
                 <div class="hidden sm:flex items-center gap-2 bg-green-900/10 px-3 py-1.5 rounded border border-green-500/20">
                     <span class="w-1.5 h-1.5 rounded-full bg-green-500 animate-pulse shadow-[0_0_8px_#22c55e]"></span>
                     <span class="text-[9px] text-green-400 font-mono uppercase tracking-widest">System Online</span>
